--- a/app.json
+++ b/app.json
@@ -1,15 +1,10 @@
 {
   "expo": {
-    "name": "scratch-for-discord",
+    "name": "Scratch For Discord",
     "slug": "scratch-for-discord",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
